# picorgb

./: CMakeLists.txt  picorgb.c  picorgb.cmake  ws2812.pio
include/: picorgb.h
picorgb/: CMakeLists.txt  main.c  picorgb.c
picorgb/include/: picorgb.h
